<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/search_by"
                android:layout_marginBottom="5dp"
                />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_title"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_search_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/search_by_name" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_search_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/search_by_date"
                    android:inputType="text"
                    android:onClick="getDate" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/event_recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>