<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_form"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    cardview:cardElevation="2dp"
    cardview:cardCornerRadius="4dp"
    android:paddingTop="10dp"
    android:layout_margin="10dp"
    android:visibility="gone">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/test_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/search_by_name" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/test_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/age" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/test_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:background="@color/colorBottom"
            android:gravity="center">
            <Button
                android:id="@+id/save_test"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Guardar"
                android:onClick="saveTest"/>
        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>